--- a/css/public/prijzenlijst.css
+++ b/css/public/prijzenlijst.css
@@ -89,7 +89,7 @@
     height: 100%;
     width: 80%;
     align-content: flex-start;
-    justify-content: flex-start;
+    justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
 }
